<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="start">START</string>
    <string name="logo">Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="calculate">Calculate</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="bmi">BMI</string>
    <string name="history">History</string>
</resources>