<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_green"
    android:padding="@dimen/screen_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button Start -->
    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_circular_border_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/logo_beige"
            android:textSize="22sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flStart">

        <!-- Button BMI -->
        <FrameLayout
            android:id="@+id/flBMI"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_margin="16dp"
            android:background="@drawable/item_circular_color_beige_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flStart"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bmi"
                android:textColor="@color/bg_green"
                android:textSize="22sp"
                android:textStyle="bold" />

        </FrameLayout>

        <!-- Button History -->
        <FrameLayout
            android:id="@+id/flHistory"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_margin="16dp"
            android:background="@drawable/item_circular_color_beige_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/flBMI"
            app:layout_constraintTop_toBottomOf="@id/flStart"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/history"
                android:textColor="@color/bg_green"
                android:textSize="22sp"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>